deploy/openshift/overlays/example/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: odysseus-example
  labels:
    app.kubernetes.io/part-of: odysseus
