deploy/openshift/overlays/example/route-host.patch.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: odysseus
spec:
  host: odysseus.apps.example.com
